--- a/index_template copy.html
+++ b/index_template copy.html
@@ -144,31 +144,13 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
-                                </p>
-                                <p></p>
-                            </li>
-
-                            <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
-                                </p>
-                                <p></p>
-                            </li>
-
-                            <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
-                                </p>
-                                <p></p>
-                            </li>
-
-                            <li>
                                 <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
+                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
                                     is accepted by <a href="http://www.jos.org.cn">JOS</a>.
                                 </p>
                                 <p></p>
@@ -187,13 +169,13 @@
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer
                                     Exceptions" is accepted by <a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software
                                     Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>.</p>
                                 <p></p>
                             </li>
@@ -272,23 +254,7 @@
                     <div class="content">
                         <!-- <hr> -->
                         <ol>
-                            <li><p><b><font size="3" color="#0b5394">[CCS'24]</font></b> <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching.</strong><br> <u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City,  United States, to appear, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities.</strong><br> Susheng Wu, Ruisi Wang, <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, to appear, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection.</strong><br> Xiaobing Sun, Xingan Gao, Sicong Cao, Lili Bo, Xiaoxue Wu, <u>Kaifeng Huang</u>.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, to appear, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ISSTA'24]</font></b> <strong>Your "Notice" is Missing: Detecting and Fixing Violations of  Modification Terms in Open Source Licenses during Forking.</strong><br> <u>Kaifeng Huang</u>, Yingfeng Xia, Bihuan Chen, Siyang He, Huazheng Zeng, Zhuotong Zhou, Jin Guo, Xin Peng.<em>&nbsp;In Proceedings of the 33rd ACM SIGSOFT International Symposium on Software Testing and Analysis, Vienna, Austria, to appear, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[JOS]</font></b> <strong>基于静态分析的Python第三方库API兼容性问题检测方法 (Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis).</strong><br> 沈阚, <u>黄凯锋</u>, 陈碧欢, 彭鑫.<em>&nbsp;软件学报（Journal of Software）,  to appear, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[SANER'24]</font></b> <strong>Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer Exceptions.</strong><br> Dongfang Xie, Bihuan Chen, <u>Kaifeng Huang</u>, Yu Wang, Linghao Pan, Zhicheng Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31st IEEE International Conference on Software Analysis, Evolution and Reengineering, Rovaniemi, Finland, pp. 849-859, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ICSE'24]</font></b> <strong>Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities.</strong><br> Susheng Wu, Wenyan Song, <u>Kaifeng Huang</u>, Bihuan Chen, Xin Pen.<em>&nbsp;In Proceedings of the 46th IEEE/ACM International Conference on Software Engineering, Lisbon, Portugal, pp. 162: 1-12, 2024.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[FSE'23]</font></b> <strong>Demystifying Dependency Bugs in Deep Learning Stack.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junmin Cao, Lei Ma, Xin Peng.<em>&nbsp;In Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, San Francisco, California, United States, pp. 450-462, 2023.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ICSME'23]</font></b> <strong>Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa.</strong><br> Junming Cao, Bihuan Chen, Longjie Hu, Jie Gao, <u>Kaifeng Huang</u>, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution, Bogotá, Colombia, pp. 258-270, 2023.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[FSE'22]</font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br> Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, pp.  860–871, 2022.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[EMSE'22]</font></b> <strong>Characterizing Usages, Updates and Risks of Third-party Libraries in Java Projects.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang, Bowen Shi, Xin Peng, Yijian Wu, Yang Liu.<em>&nbsp;Empirical Software Engineering,  27.4:90, 2022.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ASE'21]</font></b> <strong>REPFINDER: Finding Replacements for Missing APIs in Library Update.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering, Melbourne, Australia, pp. 266-278, 2021.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[FSE'20]</font></b> <strong>Interactive, Effort-aware Library Version Harmonization.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, pp. 518-529, 2020.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ICSME'20]</font></b> <strong>An Empirical Study of Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong><br> Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu, Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia, pp. 35-45, 2020.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ASE'18]</font></b> <strong>Cldiff: Generating Concise Linked Code Differences.</strong><br> <u>Kaifeng Huang</u>, Daihong Zhou, Bihuan Chen, Ying Wang, Wenyun Zhao, Xin Peng, Yang Liu.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France, pp. 679-690, 2018.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ICSA'20]</font></b> <strong>Designdiff: Continuously Modeling Software Design Difference from Code Revisions.</strong><br> Xiao Wang, Lu Xiao, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong Zhao, Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, pp. 179-190, 2020.</em></p></li>
-
+                            PUBLICATION__CONTENT
                         </ol>
                     </div>
                 </section>
