--- a/index_template.html
+++ b/index_template.html
@@ -144,13 +144,31 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
                                 <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
+                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
                                     is accepted by <a href="http://www.jos.org.cn">JOS</a>.
                                 </p>
                                 <p></p>
@@ -169,13 +187,13 @@
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer
                                     Exceptions" is accepted by <a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software
                                     Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>.</p>
                                 <p></p>
                             </li>
