--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
