--- a/index.html
+++ b/index.html
@@ -99,8 +99,39 @@
                         <tbody>
                             <tr>
                                 <td width="70%">
+                                    <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching.</strong>&nbsp;<u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.&nbsp; <em>In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City, United States, to appear, 2024.</em>
+                                    <br>
+                                    <!-- <div>
+                                        <button type="button" class="btn btn-outline-dark">PDF</button>
+                                        <button type="button" class="btn btn-outline-dark">BIB</button>
+                                    </div> -->
+                                </td>
+                                <td width="30%">
+                                    <img src="images/highlights/highlights-vmud.png" alt="alt ">
+                                </td>
+                            </tr>
+                            <tr>
+
+                            <tr>
+                                <td width="70%">
+                                    <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities.</strong>&nbsp;
+                                    Susheng Wu, Ruisi Wang,  <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng. 
+                                    &nbsp; <em>In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, to appear, 2024.</em>
+                                    <br>
+                                    <!-- <div>
+                                        <button type="button" class="btn btn-outline-dark">PDF</button>
+                                        <button type="button" class="btn btn-outline-dark">BIB</button>
+                                    </div> -->
+                                </td>
+                                <td width="30%">
+                                    <img src="images/highlights/highlights-vision.png" alt="alt ">
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="70%">
                                     <strong>Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities.</strong>&nbsp;Susheng Wu, Wenyan Song, <u>Kaifeng Huang</u>, Bihuan Chen, Xin Pen.&nbsp; <em>In Proceedings of the 46th
-                                    IEEE/ACM International Conference on Software Engineering (ICSE), Lisbon, Portugal, to appear, 2024.</em>
+                                    IEEE/ACM International Conference on Software Engineering (ICSE), Lisbon, Portugal, pp. 162: 1-12, 2024.</em>
                                     <br>
                                     <!-- <div>
                                         <button type="button" class="btn btn-outline-dark">PDF</button>
@@ -111,21 +142,18 @@
                                     <img src="images/highlights/hl1.png" alt="alt ">
                                 </td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
 
                                 <td width="70%">
                                     <strong>Demystifying Dependency Bugs in Deep Learning Stack.&nbsp;</strong><u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junmin Cao, Lei Ma, Xin Peng.&nbsp; <em>In Proceedings of the 31st ACM Joint European Software Engineering
                                     Conference and Symposium on the Foundations of Software Engineering, San Francisco, California (ESEC/FSE), United States, pp. 450-462, 2023.</em>
                                     <br>
-                                    <!-- <div>
-                                        <button type="button" class="btn btn-outline-dark">PDF</button>
-                                        <button type="button" class="btn btn-outline-dark">BIB</button>
-                                    </div> -->
+                                    
                                 </td>
                                 <td width="30%">
                                     <img src="images/highlights/hl2.png" alt="alt ">
                                 </td>
-                            </tr>
+                            </tr> -->
 
                         </tbody>
                     </table>
