change fonts to local to accelerate

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- CSS only -->
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JGY03T9W52"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-JGY03T9W52"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -25,7 +25,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-JGY03T9W52');
-    </script>
+    </script> -->
 </head>
 
 <body class="is-preload">
