--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 </header>
 
                 <div class="pic">
-                    <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]">
+                    <!-- <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]"> -->
+                    <img class="avatar is-rounded is-188x188" src="https://s1.imagehub.cc/images/2024/09/29/81afdbe04a0818c553a4a5348e6f5ce8.jpeg" alt="[]">
                 </div>
 
                 <section>
