use cdn images at imagehub.cc

--- a/index_template.html
+++ b/index_template.html
@@ -63,8 +63,10 @@
                     </p>
                 </header>
 
+
                 <div class="pic">
-                    <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]">
+                    <img class="avatar is-rounded is-188x188" src="https://s1.imagehub.cc/images/2024/09/29/81afdbe04a0818c553a4a5348e6f5ce8.jpeg" alt="[]">
+                    <!-- <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]"> -->
                 </div>
 
                 <section>
@@ -99,7 +101,7 @@
                         <tbody>
                             <tr>
                                 <td width="70%">
-                                    <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching.</strong>&nbsp;<u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.&nbsp; <em>In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City, United States, to appear, 2024.</em>
+                                    <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching.</strong>&nbsp;<u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.&nbsp; <em>In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City, United States, accepted, 2024.</em>
                                     <br>
                                     <!-- <div>
                                         <button type="button" class="btn btn-outline-dark">PDF</button>
@@ -107,7 +109,8 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="images/highlights/highlights-vmud.png" alt="alt ">
+                                    <img src="https://s1.imagehub.cc/images/2024/09/29/d528c408f919219807720bc4dd882970.png" alt="highlights vmud">
+                                    <!-- <img src="images/highlights/highlights-vmud.png" alt="alt "> -->
                                 </td>
                             </tr>
                             <tr>
@@ -116,7 +119,7 @@
                                 <td width="70%">
                                     <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities.</strong>&nbsp;
                                     Susheng Wu, Ruisi Wang,  <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng. 
-                                    &nbsp; <em>In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, to appear, 2024.</em>
+                                    &nbsp; <em>In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, accepted, 2024.</em>
                                     <br>
                                     <!-- <div>
                                         <button type="button" class="btn btn-outline-dark">PDF</button>
@@ -124,7 +127,9 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="images/highlights/highlights-vision.png" alt="alt ">
+                                    <img src="https://s1.imagehub.cc/images/2024/09/29/dd281048c6aaa3bb781ceba568e4571e.png" alt="highlights vision">
+                                    <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
+                                    <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
                                 </td>
                             </tr>
 
@@ -139,7 +144,8 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="images/highlights/hl1.png" alt="alt ">
+                                    <img src="https://s1.imagehub.cc/images/2024/09/29/9b0c6fcf8f34bda3c879584212b4c123.png" alt="hl1">
+                                    <!-- <img src="images/highlights/hl1.png" alt="alt "> -->
                                 </td>
                             </tr>
                             <!-- <tr>
@@ -172,25 +178,26 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
-                                </p>
+                                <!-- <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>. -->
+                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                    </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
