replace to jquery cdn

--- a/index.html
+++ b/index.html
@@ -388,7 +388,9 @@
                             <b>Address:</b> Room 408, No. 4800, Caoan highway, Shanghai, China.
                         </dl>
                         <dl class="alt">
-                            <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a>
+                            <img src="" alt="tongjimail" border="0">
+                            <!-- <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a> -->
+                            <b>Mail:</b> kaifengh<img src="https://s1.imagehub.cc/images/2024/09/29/1ae071442731e70477a6a3bc4c915cc8.png" style="width:112px;height:17px;" alt=""></a>
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
@@ -431,7 +433,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="https://s3.pstatp.com/cdn/expire-1-w/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="assets/js/jquery.min.js"></script> -->
+    
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
